# astounding-arapaimas

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  gunicorn_conf.py  pyproject.toml  runner.py  test.py
.github/workflows/: build.yml
api/: backend_pre_start.py  constants.py  main.py
api/alembic/: env.py
api/alembic/versions/: a4bfab0f7c83_add_user_model.py  ee342012a985_create_games_table.py
api/crud/: __init__.py  base.py  crud_game.py  crud_user.py
api/db/: base.py  base_class.py  session.py
api/endpoints/: __init__.py  auth.py  games.py
api/models/: __init__.py  game.py  user.py
api/schemas/: game.py  user.py
api/static/: base.css
api/templates/: api_token.html  base.html  cookie_disabled.html  not_found.html
api/utils/: auth.py  chess.py
app/: __main__.py  ascii_art.py  chess.py  colour_scheme.py  constants.py  game_manager.py  game_menu.py  menu_helper.py
app/configuration/: config_loader.py
app/configuration/validators/: run_validations.py  theme_validator.py  token_validator.py  validator_base.py
app/ui/: Colour.py
docs/: README.md  getting-started.md  setup.md
scripts/: prestart.sh  start.sh
stealth-chess/: runner.py
stealth-chess/app/: chess.py  game_manager.py
